Correções para execução dos testes

--- a/catalog/catalog-repository/src/test/java/resources/application.properties
+++ b/catalog/catalog-repository/src/test/java/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-#
+spring.jpa.hibernate.ddl-auto=update
+
 ## Disable flyway for unit tests
 spring.flyway.enabled=false
