--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -9,6 +9,7 @@
     <description>management products</description>
     <packaging>pom</packaging>
     <modules>
+        <module>../common</module>
         <module>catalog-model</module>
         <module>catalog-repository</module>
         <module>catalog-api</module>
