--- a/catalog/catalog-api/Dockerfile
+++ b/catalog/catalog-api/Dockerfile
@@ -8,5 +8,5 @@ ARG SPRING_PROFILES_ACTIVE
 ENV SPRING_PROFILES_ACTIVE=$SPRING_PROFILES_ACTIVE
 COPY ${JAR_FILE} app.jar
 # heroku deploy ENTRYPOINT
-# ENTRYPOINT ["java","${MEMORY_USE}", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", "-jar","/app.jar"]
-ENTRYPOINT java ${MEMORY_USE} -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE} -jar /app.jar
+ENTRYPOINT ["java","${MEMORY_USE}", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", "-jar","/app.jar"]
+# ENTRYPOINT java ${MEMORY_USE} -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE} -jar /app.jar
