--- a/catalog/catalog-api/src/main/resources/application-test.properties
+++ b/catalog/catalog-api/src/main/resources/application-test.properties
@@ -1,5 +1,8 @@
 #####################Test#################################
 
+server.port=9999
+
+
 #Database
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
