--- a/common/auth-utils/pom.xml
+++ b/common/auth-utils/pom.xml
@@ -10,7 +10,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>2.5.3</spring.version>
         <nimbus-jose.version>7.0</nimbus-jose.version>
     </properties>
