--- a/common/infrastructure/pom.xml
+++ b/common/infrastructure/pom.xml
@@ -9,9 +9,12 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>2.5.3</spring.version>
+        <nimbus-jose.version>7.0</nimbus-jose.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>commons-beanutils</groupId>
