--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -1,7 +1,15 @@
 name: deploy-heroku
 
+#   workflow_dispatch:
 on:
-  workflow_dispatch:
+  # Trigger the workflow on push or pull request,
+  # but only for the main branch
+  push:
+    branches:
+      - heroku-deploy
+  pull_request:
+    branches:
+      - heroku-deploy
 jobs:
   deploy-catalog:
     runs-on: ubuntu-latest
