--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -1,7 +1,6 @@
 name: deploy-heroku
-
-#   workflow_dispatch:
 on:
+  workflow_dispatch:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
   push:
